--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 	<link rel="stylesheet" href="./default.css">
 </head>
 <body>
-	test
+	<nav class="navbar">
+		<div>The Store</div>
+		<button>Cart</button>
+		<div>Electronics</div>
+		<div>Jewelery</div>
+		<div>Men's Clothing</div>
+		<div>Women's Clothing</div>
+	</nav>
+	
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 	<script src="./main.js"></script>
 </body>
