--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 	<link rel="stylesheet" href="./default.css">
 </head>
-<body>
+<body class="d-flex justify-content-center flex-column overflow-x-hidden">
 	<nav class="navbar">
 		<div>The Store</div>
 		<button>Cart</button>
@@ -18,7 +18,9 @@
 	</nav>
 
 	<div id="display">
-
+		<div>test</div>
+		<div>test</div>
+		<div>test</div>
 	</div>
 
 	<footer><h5>Unit 4 Project ~ Upright Education Copyright © 2023</h5></footer>
