--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="./default.css">
 </head>
 <body class="d-flex justify-content-center flex-column overflow-x-hidden">
-	<nav class="navbar">
+	<nav class="navbar sticky-top bg-black w-100">
 		<div>The Store</div>
 		<button>Cart</button>
 		<div>Electronics</div>
