added bootstrap classes to the display

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div>Women's Clothing</div>
 	</nav>
 
-	<div id="display">
+	<div id="display" class="text-center mt-1">
 		<div>test</div>
 		<div>test</div>
 		<div>test</div>
