--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 		<div>test</div>
 	</div>
 
-	<footer><h5>Unit 4 Project ~ Upright Education Copyright © 2023</h5></footer>
+	<footer class="m-auto bg-black text-white sticky-bottom">
+		<h5>Unit 4 Project ~ Upright Education Copyright © 2023</h5>
+	</footer>
 	
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 	<script src="./main.js"></script>
