fixed global variables, framed function

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 	<nav class="navbar sticky-top bg-black w-100">
 		<div>The Store</div>
 		<button>Cart</button>
-		<div>Electronics</div>
-		<div>Jewelery</div>
-		<div>Men's Clothing</div>
-		<div>Women's Clothing</div>
+		<div id="Electronics">Electronics</div>
+		<div id="Jewelry">Jewelery</div>
+		<div id="Men's Clothing">Men's Clothing</div>
+		<div id="Women's Clothing">Women's Clothing</div>
 	</nav>
 
 	<div id="display" class="text-center mt-1">
