--- a/index.html
+++ b/index.html
@@ -10,12 +10,33 @@
 <body class="d-flex justify-content-center flex-column overflow-x-hidden">
 	<nav class="navbar sticky-top bg-black w-100">
 		<div>The Store</div>
-		<button>Cart</button>
+		<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#cart">Cart</button>
 		<div id="Electronics">Electronics</div>
 		<div id="Jewelry">Jewelery</div>
 		<div id="Men's Clothing">Men's Clothing</div>
 		<div id="Women's Clothing">Women's Clothing</div>
 	</nav>
+
+	<!-- taken from https://getbootstrap.com/docs/4.0/components/modal/ -->
+	<div id="cart" class="modal" tabindex="-1" role="dialog">
+		<div class="modal-dialog" role="document">
+		  <div class="modal-content">
+			<div class="modal-header">
+			  <h5 class="modal-title">Modal title</h5>
+			  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+				<span aria-hidden="true">&times;</span>
+			  </button>
+			</div>
+			<div class="modal-body">
+			  <p>Modal body text goes here.</p>
+			</div>
+			<div class="modal-footer">
+			  <button type="button" class="btn btn-primary">Save changes</button>
+			  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+			</div>
+		  </div>
+		</div>
+	  </div>
 
 	<div id="display" class="text-center mt-1">
 		<div>test</div>
