--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
 		<div id="Women's Clothing">Women's Clothing</div>
 	</nav>
 
+	<!-- <div id="cardBase" class="card" style="width: 18rem;">
+		<img class="card-img-top" src="" alt="Card image cap">
+		<div class="card-body">
+		  <h5 class="card-title">Card title</h5>
+		  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+		  <a href="#" class="btn btn-primary">Go somewhere</a>
+		</div>
+	</div> -->
+
 	<!-- taken from https://getbootstrap.com/docs/4.0/components/modal/ -->
 	<div id="cart" class="modal" tabindex="-1" role="dialog">
 		<div class="modal-dialog" role="document">
