--- a/index.html
+++ b/index.html
@@ -10,44 +10,29 @@
 <body class="d-flex justify-content-center flex-column overflow-x-hidden">
 	<nav class="navbar sticky-top bg-black w-100">
 		<div>The Store</div>
-		<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#cart">Cart</button>
+		<button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal">Cart</button>
 		<div id="Electronics">Electronics</div>
 		<div id="Jewelry">Jewelery</div>
 		<div id="Men's Clothing">Men's Clothing</div>
 		<div id="Women's Clothing">Women's Clothing</div>
 	</nav>
 
-	<!-- <div id="cardBase" class="card" style="width: 18rem;">
-		<img class="card-img-top" src="" alt="Card image cap">
-		<div class="card-body">
-		  <h5 class="card-title">Card title</h5>
-		  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-		  <a href="#" class="btn btn-primary">Go somewhere</a>
+	<div class="container text-black">
+		<div id="modal" class="modal">
+			<div class="modal-dialog modal-dialog-scrollable">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h2>Your Cart</h2>
+						<button class="btn-close" data-bs-dismiss="modal" data-bs-target="#modal"></button>
+					</div>
+					<div class="modal-body">Body</div>
+					<div class="modal-footer">Footer</div>
+				</div>
+			</div>
 		</div>
-	</div> -->
+	</div>
 
-	<!-- taken from https://getbootstrap.com/docs/4.0/components/modal/ -->
-	<div id="cart" class="modal" tabindex="-1" role="dialog">
-		<div class="modal-dialog" role="document">
-		  <div class="modal-content">
-			<div class="modal-header">
-			  <h5 class="modal-title">Modal title</h5>
-			  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-				<span aria-hidden="true">&times;</span>
-			  </button>
-			</div>
-			<div class="modal-body">
-			  <p>Modal body text goes here.</p>
-			</div>
-			<div class="modal-footer">
-			  <button type="button" class="btn btn-primary">Save changes</button>
-			  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-			</div>
-		  </div>
-		</div>
-	  </div>
-
-	<div id="display" class="text-center mt-1">
+	<div id="display" class="text-center mt-1 d-flex fustify-content-center flex-row flex-wrap">
 		<div>test</div>
 		<div>test</div>
 		<div>test</div>
