--- a/index.html
+++ b/index.html
@@ -25,7 +25,42 @@
 						<h2>Your Cart</h2>
 						<button class="btn-close" data-bs-dismiss="modal" data-bs-target="#modal"></button>
 					</div>
-					<div class="modal-body">Body</div>
+					<div class="modal-body">
+						<table class="table">
+							<thead>
+								<tr>
+									<th scope="col">Quantity</th>
+									<th scope="col">Item</th>
+									<th scope="col">Price</th>
+								</tr>
+							</thead>
+							<tbody id="itemListBody">
+								<tr>
+									<td>0</td>
+									<td></td>
+									<td>$0.00</td>
+								</tr>
+							</tbody>
+						</table>
+						<table class="table">
+							<tr>
+								<th>Subtotal:</th>
+								<td id="subtotal">$0.00</td>
+							</tr>
+							<tr>
+								<th>Tax:</th>
+								<td id="tax">$0.00</td>
+							</tr>
+							<tr>
+								<th>Shipping:</th>
+								<td id="shipping">$0.00</td>
+							</tr>
+							<tr>
+								<th>Total:</th>
+								<td id="total">$0.00</td>
+							</tr>
+						</table>
+					</div>
 					<div class="modal-footer">Footer</div>
 				</div>
 			</div>
